# cosmology

./: .gitignore  CMakeLists.txt
include/: cosmology.h
src/: axioms.h  cosmology.cpp  cosmology.h  luon.h  paradigm.h  psyche.h
src/axioms/: constants.h  interfaces.cpp  interfaces.h  macros.h  math.h  mathematics.cpp  mathematics.h  paradigm.h  premise.h  primitive.cpp  primitive.h  time.cpp  time.h
src/impressions/: barometer.h  bubbles.cpp  bubbles.h  calibration.h  feathered_flight.h  happy_pink_hearts.cpp  happy_pink_hearts.h  hymn.h  impression.h  juice.h  puff.h  tyr.h  watercolor.h  workshop.h
src/perception/: equalizer.h  ring_buffer.h
